--- a/app.html
+++ b/app.html
@@ -63,7 +63,7 @@
     </section>
     <section class="recreate">
     	<div class="container">
-    		<div class="row text-center">
+    		<div class="row text-center titulo">
     			<h2>Recreate your ideas and gain more success</h2>
     			<p>Increase your user loyalty by maintaining mutual communication and nurtuting your online community.</p>
     		</div>
